--- a/signup/templates/layout.html
+++ b/signup/templates/layout.html
@@ -43,6 +43,7 @@
                         <li class="nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Welcome {{user.first_name}} {{user.last_name}}</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarToggle">
                             <li><a href="{% url 'myconcerts' %}" class="dropdown-item">My Concerts</a></li>
+                            <li><a href="{% url 'settz' %}" class="dropdown-item">Set Timezone</a></li>
                             <li><a href="#" class="dropdown-item">Profile</a></li>
                             <li><a href="{% url "logout" %}" class="dropdown-item">Log Out</a></li>
                         </ul></li>
