--- a/signup/templates/signup/concertpage.html
+++ b/signup/templates/signup/concertpage.html
@@ -5,6 +5,9 @@
 {{concert.location}}
 {% endblock %}
 {% block body %}
+<script type="text/javascript">
+    const concertid = "{{concert.id}}";
+</script>
 <script src="/static/jquery/jquery-3.6.3.min.js"
     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -36,7 +39,7 @@
                 <path
                     d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1H9v1.07a7.001 7.001 0 0 1 3.274 12.474l.601.602a.5.5 0 0 1-.707.708l-.746-.746A6.97 6.97 0 0 1 8 16a6.97 6.97 0 0 1-3.422-.892l-.746.746a.5.5 0 0 1-.707-.708l.602-.602A7.001 7.001 0 0 1 7 2.07V1h-.5A.5.5 0 0 1 6 .5zm2.5 5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5zM.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.035 8.035 0 0 0 .86 5.387zM11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.035 8.035 0 0 0-3.527-3.527z" />
             </svg>
-            <b>Time: </b> {{ concert.dateandtime | localtime | date:"g:i A"}} <br>
+            <b>Time: </b> {{ concert.dateandtime | date:"g:i A"}} <br>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
                 <path
@@ -98,6 +101,24 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="editperformancemodal" tabindex="-1" aria-labelledby="editmodallabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Performance</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="editperformancemodalcontent"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-success" onclick="editperformance()">Save</button>
+                </div>
+            </div>
+            
+        </div>
+        
+    </div>
+</div>
 
 <hr>
 {% if not concert.signuplink %}
@@ -136,7 +157,7 @@
         </td>
         <td style="width: 20%;">
             {% if request.user in performance.performer.all or useriseventmanager %}
-            {{ performance.comment |safe }} <a href="{% url 'editperformance' concert_id=concert.id performance_id=performance.id %}" class="btn btn-primary btn-floating"><i class="fas fa-pen"></i></a><a class="btn btn-floating btn-danger" href="#" onclick="passdata({{performance.id}})" data-bs-toggle="modal" data-bs-target="#deleteperformancemodal"><i class="fas fa-trash-alt"></i></a>
+            {{ performance.comment |safe }} <a href="{% url 'editperformance' concert_id=concert.id performance_id=performance.id %}" data-bs-toggle="modal" data-bs-target="#editperformancemodal" onclick="showeditperformance('{{performance.id}}')" class="btn btn-primary btn-floating"><i class="fas fa-pen"></i></a><a class="btn btn-floating btn-danger" href="#" onclick="passdata('{{performance.id}}')" data-bs-toggle="modal" data-bs-target="#deleteperformancemodal"><i class="fas fa-trash-alt"></i></a>
             {% endif %}
         </td>
     </tr>
@@ -150,7 +171,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <input id="performancedata" hidden value="">
+                <input id="performancedata" hidden val="">
                 <div id="message">Warning. Removing a performance is permanent. Type 'delete' to continue.</div>
                 <input id="deleteconfirm2" type="text" class="form-control" placeholder="">
             </div>
@@ -177,7 +198,7 @@
     function validatedeleteperformance() {
         performanceid = $("#performancedata").val();
         if (performanceid == $("#deleteconfirm2").val()) {
-            window.location.replace("/signup/concert/" + {{concert.id}} + '/' +  performanceid + "/delete");
+            window.location.replace("/signup/concert/" + '{{concert.id}}' + '/' +  'performanceid' + "/delete");
         }
     }
 </script>
@@ -202,9 +223,47 @@
         });
     })
 </script>
+
+<script type="text/javascript">
+function showeditperformance(pid) {
+    editperformancemodalcontent = $("#editperformancemodalcontent");
+    $.ajax({
+        url: "{{concert.id}}/" + pid + "/edit"
+    }).done(function (data) {
+        console.log("Done")
+        editperformancemodalcontent.html(data)
+    })
+}
+
+function editperformance() {
+    performanceid = $("#performanceid").val();
+    tinymce.triggerSave();
+    $.ajax({
+        type: "POST",
+        url: "{{concert.id}}/" + performanceid + "/edit",
+        data: $("#newperformanceform").serialize()
+    }).done(function(data) {
+        console.log("Performance Edited Successfullly.");
+        editperformancemodal = bootstrap.Modal.getOrCreateInstance("#editperformancemodal");
+        // console.log("Edited performance successfully!")
+        editperformancemodal.hide();
+        location.reload();
+    })
+}
+</script>
 {% else %}
 <div class="alert alert-danger">This concert does not have a signup via Project Melody HUB. Instead use the signup button to signup. You will be redirected to the signup page.</div>
 {% endif %}
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+  <div id="messagetoast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <img src="..." class="rounded me-2" alt="...">
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body" id="toastmessage">
+    </div>
+  </div>
+</div>
 <!-- PADDING FOR THE BOTTOM OF THE PAGE -- DO NOT REMOVE -->
 <div style="height: 20px;"></div>
 {% endblock %}
