--- a/signup/templates/signup/createconcert.html
+++ b/signup/templates/signup/createconcert.html
@@ -26,6 +26,13 @@
     <input type="datetime-local" id="createconcert-datetime" class="form-control" name="datetime" value="{{concert.dateandtime|date:'Y-m-d\TH:i'}}" required>
 </div>
 <div class="mb-3">
+    <label for="createconcert-tz" class="form-label">Timezone</label>
+    <select class="form-select" name="timezone" required>
+        <option selected>Auckland</option>
+        <option>Austin</option>
+    </select>
+</div>
+<div class="mb-3">
     <label for="createconcert-maxtime" class="form-label">Maximum Concert Duration</label>
     <input type="number" id="createconcert-maxtime" class="form-control" name="maxtime" value="{{concert.maxtime}}" required>
 </div>
