--- a/signup/templates/layout.html
+++ b/signup/templates/layout.html
@@ -4,32 +4,59 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{%endblock%} - Project Melody HUB</title>
-        
-        <link href="/static/sbootstrap/css/bootstrap.min.css" rel="stylesheet"
-             crossorigin="anonymous">
-        <script src="/static/sbootstrap/js/bootstrap.bundle.js"
-            crossorigin="anonymous"></script>
+
+        <link href="/static/sbootstrap/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+        <script src="/static/sbootstrap/js/bootstrap.bundle.js" crossorigin="anonymous"></script>
         <!-- Font Awesome -->
         <link href="/static/fontawesome/css/all.min.css" rel="stylesheet" />
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+
         <!-- MDB -->
         <link href="/static/mdbootstrap/css/mdb.min.css" rel="stylesheet" />
         <!-- MDB -->
-        <script type="text/javascript"
-            src="/static/mdbootstrap/js/mdb.min.js"></script>
+        <script type="text/javascript" src="/static/mdbootstrap/js/mdb.min.js"></script>
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Noto Sans:300,400,500,700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Noto Color Emoji:300,400,500,700&display=swap"
+            rel="stylesheet" />
+        <script type="text/javascript" src="/static/twemoji/twemoji.min.js"></script>
         <style>
+            @font-face {
+                font-family: 'OpenMoji';
+                src: url('/static/OpenMoji-Color.ttf');
+            }
+
             .table thead th {
-                font-weight: bold!important;
+                font-weight: bold !important;
+            }
+
+            body {
+                font-family: 'Noto Sans', 'OpemMoji', sans-serif;
+                font-variant-emoji: unicode;
+            }
+
+            img.emoji {
+                height: 1em;
+                margin: 0 0.05em 0 0.1em;
+                width: 1em;
             }
         </style>
+        <script src="/static/jquery/jquery-3.6.3.min.js" crossorigin="anonymous"></script>
+        <script type="text/javascript">
+            $(document).ready(() => {
+                console.log("parsing emoji");
+                twemoji.parse(document.body, { base: "/static/twemoji/", size: 72, ext: '.svg', folder: 'svg' });
+            });
+
+        </script>
     </head>
 
     <body>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand">Project Melody HUB</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,13 +67,15 @@
                         <li class="nav-item"><a href="{% url 'calendar' %}" class="nav-link">Calendar</a></li>
                     </ul>
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Welcome {{user.first_name}} {{user.last_name}}</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarToggle">
-                            <li><a href="{% url 'myconcerts' %}" class="dropdown-item">My Concerts</a></li>
-                            <li><a href="{% url 'settz' %}" class="dropdown-item">Set Timezone</a></li>
-                            <li><a href="#" class="dropdown-item">Profile</a></li>
-                            <li><a href="{% url "logout" %}" class="dropdown-item">Log Out</a></li>
-                        </ul></li>
+                        <li class="nav-item dropdown"><a href="#" class="nav-link dropdown-toggle"
+                                data-bs-toggle="dropdown">Welcome {{user.first_name}} {{user.last_name}}</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarToggle">
+                                <li><a href="{% url 'myconcerts' %}" class="dropdown-item">My Concerts</a></li>
+                                <li><a href="{% url 'settz' %}" class="dropdown-item">Set Timezone</a></li>
+                                <li><a href="#" class="dropdown-item">Profile</a></li>
+                                <li><a href="{% url "logout" %}" class="dropdown-item">Log Out</a></li>
+                            </ul>
+                        </li>
                     </ul>
                     {% else %}
                     <ul class="navbar-nav ms-auto">
